<resources>
    <string name="app_name">Poems</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="poem_fragment_label">Poem Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="who_wrote_it">Who wrote it?</string>
    <string name="sample_poem_title">Loading poem...</string>
    <string name="sample_poem_content">Check your Internet connection and try refreshing if loading is stuck.</string>
    <string name="sample_poem_author">…</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="enter_query">Enter your query here...</string>
    <string name="saved_fav">Saved to favorites!</string>
    <string name="removed_fav">Removed from favorites.</string>
    <string name="loading">Loading...</string>
    <string name="replay">Replay?</string>
</resources>