<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.djemai.poems.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_baseline_folder_special_24"
        android:title="@string/favorites"
        app:showAsAction="always" />
    <item
        android:id="@+id/who_wrote_it"
        android:icon="@drawable/ic_baseline_person_search_24"
        android:title="@string/who_wrote_it"
        app:showAsAction="always" />
</menu>