<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PoemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="fill_vertical">

        <TextView
            android:id="@+id/poem_title_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sample_poem_title"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            android:typeface="serif" />

        <ToggleButton
            android:id="@+id/toggleButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:layout_marginStart="4dp"
            android:background="@drawable/star"
            android:enabled="false"
            android:text=""
            android:textOff=""
            android:textOn=""
            android:textSize="0sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/poem_imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="false"
        android:contentDescription="Photo de couverture"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:srcCompat="@color/teal_700"
        tools:src="@tools:sample/backgrounds/scenic"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/poem_content_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:elegantTextHeight="true"
        android:lineSpacingExtra="4sp"
        android:singleLine="false"
        android:text="@string/sample_poem_content"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/poem_author_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:text="@string/sample_poem_author"
        android:textAlignment="textEnd"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="italic" />
</LinearLayout>
</ScrollView>