<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".GameActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="fill_vertical">

            <TextView
                android:id="@+id/game_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sample_poem_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                android:typeface="serif" />

        </LinearLayout>

        <TextView
            android:id="@+id/game_content_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:elegantTextHeight="true"
            android:lineSpacingExtra="4sp"
            android:singleLine="false"
            android:text="@string/sample_poem_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/game_authorButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/loading"
            android:enabled="false"/>

        <Button
            android:id="@+id/game_authorButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/loading"
            android:enabled="false"/>

        <Button
            android:id="@+id/game_authorButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/loading"
            android:enabled="false"/>

        <Button
            android:id="@+id/game_authorButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/loading"
            android:enabled="false"/>

    </LinearLayout>
</ScrollView>